BugFix: Form submit button not showing on iOS

--- a/src/createForm.css
+++ b/src/createForm.css
@@ -21,6 +21,7 @@
     height: 20vh;
 }
 #form > button[type = 'submit']{
+    margin-top: 10px;
     width: 20%;
     height: 15%;
     background-color: var(--blue);
